objects/Account_Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Account Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Depot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses (Collection Depot)</relationshipLabel>
        <relationshipName>Account_Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_on_account_address__c</fullName>
        <description>Text field to add any comments on the account address during a booking</description>
        <inlineHelpText>Are there any additional comments that the customer has made about the account address?</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>GBR</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County/Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Status__c</fullName>
        <label>Data Quality Status</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Depot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses (Delivery Depot)</relationshipLabel>
        <relationshipName>Account_Addresses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Used__c</fullName>
        <label>Last Used</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Address_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Address Id (Legacy)</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Origin Depot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Addresses (Origin Depot)</relationshipLabel>
        <relationshipName>Account_Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Name__c</fullName>
        <label>Premise Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <label>Premise Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Premise__c</fullName>
        <label>Sub Premise</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Account Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Account Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Default_Account_Address_No_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp;  !ISBLANK(Legacy_Address_Id__c) 
&amp;&amp; NOT($Profile.Name = &apos;System Administrator&apos;) 
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)
&amp;&amp; (ISCHANGED( Building__c )
|| ISCHANGED( City__c ) 
|| ISCHANGED( Country__c )
|| ISCHANGED( County__c ) 
|| ISCHANGED( District__c )
|| ISCHANGED( Org_Name__c )
|| ISCHANGED( Postcode__c )
|| ISCHANGED( Premise_Name__c )
|| ISCHANGED( Premise_Number__c ) 
|| ISCHANGED( Street_1__c ) 
|| ISCHANGED( Street_2__c ) 
|| ISCHANGED( Sub_Premise__c )  )</errorConditionFormula>
        <errorMessage>You cannot edit the Default Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_default_address</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp;  Account__r.Default_Addresses__c &gt; 0 &amp;&amp;  Default__c )  || ( ISCHANGED(Default__c) &amp;&amp; Account__r.Default_Addresses__c &gt; 0 &amp;&amp;  Default__c)</errorConditionFormula>
        <errorDisplayField>Default__c</errorDisplayField>
        <errorMessage>You can&apos;t have more than one default address per account. Please uncheck  the current default address before defining a new one</errorMessage>
    </validationRules>
</CustomObject>